--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
       "jsx"
     ]
   },
-  "repository": "https://github.com/HashemKhalifa/webpack-react-boilerplate",
-  "author": "HashemKhalifa",
+  "repository": "https://github.com/VirginiaCreativa/PostPinina.git",
+  "author": "@virginiaCreativa",
   "license": "ISC",
   "private": false,
   "engines": {
@@ -52,8 +52,8 @@
     "lodash": "4.17.11",
     "npm-check-updates": "^2.14.2",
     "prop-types": "15.6.2",
-    "react": "16.6.0",
-    "react-dom": "16.6.0",
+    "react": "^16.7.0-alpha.0",
+    "react-dom": "^16.7.0-alpha.0",
     "react-hot-loader": "4.3.11"
   },
   "resolutions": {
@@ -117,7 +117,7 @@
     "style-loader": "0.23.1",
     "webpack": "4.23.1",
     "webpack-cli": "3.1.2",
-    "webpack-merge": "4.1.4",
-    "webpack-dev-server": "3.1.10"
+    "webpack-dev-server": "3.1.10",
+    "webpack-merge": "4.1.4"
   }
 }
