--- a/package.json
+++ b/package.json
@@ -113,7 +113,8 @@
     "node-sass": "^4.9.4",
     "prettier": "1.14.3",
     "pretty-quick": "1.8.0",
-    "sass-loader": "7.1.0",
+    "sass-loader": "^7.1.0",
+    "sass-resources-loader": "^1.3.4",
     "style-loader": "0.23.1",
     "webpack": "4.23.1",
     "webpack-cli": "3.1.2",
