--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
     "@babel/runtime": "7.1.2",
+    "axios": "^0.18.0",
     "babel-core": "7.0.0-beta.3",
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
