Fetching Data on Update (without Creating Infinite Loops)  part I

--- a/.eslintrc
+++ b/.eslintrc
@@ -69,7 +69,8 @@
     "import/extensions": 0,
     "babel/object-curly-spacing": 0,
     "react/destructuring-assignment": 0,
-    "no-console": 0
+    "no-console": 0,
+    "react/prop-types": 0
   },
   "env": {
     "es6": true,
