--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-hot-loader": "4.3.11",
-    "react-router": "^4.3.1"
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
